# postgresql-cst-parser

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  build.sh  build_wasm.sh  update-gh-page.sh
.github/actions/slack-notify/: action.yml
.github/workflows/: deploy-gh-pages.yml  rust.yml  slack-notify.yml
crates/automata/: Cargo.toml
crates/automata/src/: dfa.rs  lib.rs  nfa.rs  regexp.rs
crates/lexer-generator/: Cargo.toml
crates/lexer-generator/resources/: lex_template.rs  parser.c  scan.l
crates/lexer-generator/src/: flex_file.rs  lexer_generator.rs  lexer_generator_dfa.rs  main.rs
crates/lexer-generator/src/lexer_generator/: flex_file.rs
crates/lexer-generator/templates/: lex_template.rs
crates/parser-generator/: Cargo.toml
crates/parser-generator/resources/: gram.y
crates/parser-generator/src/: main.rs  parser_generator.rs
crates/parser-generator/src/parser_generator/: bison.rs  id_mapper.rs  lalr.rs  lexer.rs  parser_error.rs
crates/parser-generator/src/parser_generator/lexer/: generated.rs  lexer_ported.rs  util.rs
crates/parser-generator/templates/: parser_template.rs
crates/postgresql-cst-parser/: CHANGELOG  Cargo.toml  README.ja.md  README.md
crates/postgresql-cst-parser-wasm/: Cargo.toml  LICENSE_MIT
crates/postgresql-cst-parser-wasm/src/: lib.rs
crates/postgresql-cst-parser/benches/: test.rs
crates/postgresql-cst-parser/benches/data/src/: create_index.sql  drop_function.sql  drop_table.sql  merge.sql  update.sql
crates/postgresql-cst-parser/examples/: sample.rs  tree_sitter_like.rs
crates/postgresql-cst-parser/src/: cst.rs  lexer.rs  lib.rs  parser.rs  syntax_kind.rs  transform.rs  tree_sitter.rs
crates/postgresql-cst-parser/src/cst/: extra.rs  lr_parse_state.rs
crates/postgresql-cst-parser/src/lexer/: generated.rs  lexer_ported.rs  parser_error.rs  util.rs
crates/postgresql-cst-parser/src/transform/: missing_from_table.rs  missing_sample_value.rs  skip_extra_comma.rs  skip_extra_operator.rs
crates/postgresql-cst-parser/src/tree_sitter/: assert_util.rs  convert.rs  transform.rs
crates/postgresql-cst-parser/tests/: bench.rs  test.rs
crates/postgresql-cst-parser/tests/data/dst/: 2way.txt  create_index.txt  create_table.txt  delete.txt  drop_function.txt  drop_table.txt  insert.txt  merge.txt  postgresql_v17.txt  select.txt  update.txt
crates/postgresql-cst-parser/tests/data/src/: 2way.sql  create_table.sql  insert.sql  postgresql_v17.sql  select.sql
crates/postgresql-lst-parser/: Cargo.toml
crates/postgresql-lst-parser-wasm/: Cargo.toml
crates/postgresql-lst-parser-wasm/src/: lib.rs
crates/postgresql-lst-parser/src/: lib.rs  lst.rs  parser.rs  syntax_kind.rs
crates/postgresql-lst-parser/src/lexer/: generated.rs  util.rs
crates/postgresql-lst-parser/tests/: test.rs
crates/postgresql-lst-parser/tests/data/dst/: update.txt
crates/postgresql-lst-parser/tests/data/src/: delete.sql
demo/: index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.css  App.tsx  index.css  main.tsx
demo/src/postgresql-cst-parser/: postgresql_cst_parser_wasm.d.ts  postgresql_cst_parser_wasm.js  postgresql_cst_parser_wasm_bg.wasm.d.ts
demo/src/postgresql-lst-parser/: postgresql_lst_parser_wasm.js
docs/: index.html
docs/assets/: index-B2ExoR5P.js  index-B9SYGAMP.css  index-BplpfIhJ.css  index-C8lOUYDE.css  index-DoPeAcH8.js  index-TBTGSimw.js  index-jkz93e-M.js  index-n6ysAqyF.js  index-rSMo3Li_.js  index-wHJQRpeg.css  index-yg4pRHwr.js  postgresql_cst_parser_wasm_bg-CBJ0RShF.wasm  postgresql_cst_parser_wasm_bg-Cu4WGzdl.wasm  postgresql_cst_parser_wasm_bg-DmDZPLZN.wasm  postgresql_cst_parser_wasm_bg-Ey8V7r8u.wasm
docs/js/: postgresql_cst_parser_wasm_bg.wasm  postgresql_lst_parser_wasm.d.ts  postgresql_lst_parser_wasm_bg.wasm
documents/: INTERNALS.ja.md
patches/: patch_scan.patch
