[workspace]
resolver = "2"

members = [
    "crates/lexer-generator",
    "crates/parser-generator",
    "crates/postgresql-lst-parser",
    "crates/postgresql-lst-parser-wasm",
]

default-members = ["crates/postgresql-lst-parser"]

[workspace.package]
exclude = ["crates/lexer-generator", "crates/parser-generator", "crates/postgresql-lst-parser-wasm"]

[profile.release.package.postgresql-lst-parser-wasm]
opt-level = "s"
