[package]
name = "parser-generator"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
#bincode = "1.3.3"
cstree = { version = "0.12.0", features = ["derive"] }
#serde = { version = "1.0.195", features = ["derive"] }
miniz_oxide = "0.7.1"
