[package]
name = "parser-generator"
version = "0.1.0"
edition = "2024"
exclude.workspace = true

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
cstree = { version = "0.12.0", features = ["derive"] }
#serde = { version = "1.0.195", features = ["derive"] }

[features]
regex-match = []
