[package]
name = "postgresql-cst-parser-wasm"
version = "0.1.0"
authors = ["tanzaku <tanzaku@users.noreply.github.com>"]
edition = "2018"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
postgresql-cst-parser = { path = "../postgresql-cst-parser" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
cstree = "0.12.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
