[package]
name = "postgresql-cst-parser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tanzaku/postgresql-cst-parser"
description = "An unofficial PostgreSQL CST parser written in Pure Rust."
authors = ["tanzaku"]
license-file = "../../LICENSE"
exclude = ["tests/**", "examples/**"]
categories = ["parser-implementations"]
keywords = ["postgres", "parser", "sql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.10.2", optional = true }
cstree = { version = "0.12.0", features = ["derive"] }

[features]
default = ["remove-empty-node"]
remove-empty-node = []
regex-match = ["regex"]

[[bench]]
name = "test"
harness = false

[dev-dependencies]
criterion = "0.5.1"
